modificaciones frontend para entrega

--- a/src/app/modulos/asignatura/asignatura-main/inscripcion/inscripcion.component.html
+++ b/src/app/modulos/asignatura/asignatura-main/inscripcion/inscripcion.component.html
@@ -2,7 +2,7 @@
 
 <!-- <button (click)="acceder()">Acceder</button> -->
 
-<div class="d-flex justify-content-center align-items-center" style="height: 5vh;">
+<div class="d-flex justify-content-center align-items-center" style="height: 5vh; margin-top: 2%;">
     <div class="input-group input-group-sm mb-3" style="width: 500px;">
       <input type="text" [formControl]="codigo" class="form-control" placeholder="Introduce el código">
       <div class="input-group-append">
