--- a/src/app/modulos/web-main/perfil/perfil.component.html
+++ b/src/app/modulos/web-main/perfil/perfil.component.html
@@ -9,7 +9,8 @@
             <option *ngFor="let asignatura of asignaturas" [value]="asignatura.id">{{ asignatura.nombre }}</option>
           </select>
         </div>
-        <button class="btn btn-primary mt-3" (click)="buscarPerfil()" *ngIf="asignaturaSeleccionada != 0">Buscar</button>
+        <button class="btn btn-primary mt-3" (click)="buscarPerfil()"
+          *ngIf="asignaturaSeleccionada != 0">Buscar</button>
       </div>
     </div>
 
@@ -27,16 +28,19 @@
 
 
                 <div *ngIf="base64Image">
-                  <img [src]="base64Image" alt="Imagen del Logro" class="img-thumbnail" style="width: 150px; height: 150px; object-fit: cover; border-radius: 50%;" />
+                  <img [src]="base64Image" alt="Imagen del Logro" class="img-thumbnail"
+                    style="width: 150px; height: 150px; object-fit: cover; border-radius: 50%;" />
                 </div>
                 <div *ngIf="!base64Image">
-                  <img [src]="'assets/images/sin-foto-perfil.jpg'" alt="Foto de perfil" class="img-thumbnail" style="width: 150px; height: 150px; object-fit: cover; border-radius: 50%;">
+                  <img [src]="'assets/images/sin-foto-perfil.jpg'" alt="Foto de perfil" class="img-thumbnail"
+                    style="width: 150px; height: 150px; object-fit: cover; border-radius: 50%;">
                 </div>
                 <div class="mt-2">
                   <input type="file" id="fotoPerfil" (change)="onFileSelected($event)" hidden>
-                  <button type="button" class="btn btn-secondary" (click)="cambiarFotoPerfil()">Cambiar Foto de Perfil</button>
+                  <button type="button" class="btn btn-secondary" (click)="cambiarFotoPerfil()">Cambiar Foto de
+                    Perfil</button>
                 </div>
-                
+
               </div>
               <div class="form-group">
                 <label for="nombreUsuario">Nombre de Usuario</label>
@@ -47,22 +51,36 @@
                 <input type="text" id="nombreReal" class="form-control" formControlName="nombreReal">
               </div>
               <div class="form-group">
+                <label for="nombreUsuario">Nombre Visible</label>
+                <input type="text" id="nombreUsuario" class="form-control" formControlName="nombreVisible">
+              </div>
+              <div class="form-group" *ngIf="!esProfesor()">
                 <label for="puntos">Puntos</label>
                 <input type="text" id="puntos" class="form-control" formControlName="puntos" readonly>
               </div>
-              <h5>Logros</h5>
-              <ul class="list-group list-group-flush">
-                <li *ngFor="let logro of perfil.listaLogros" class="list-group-item d-flex align-items-center">
-                  <span>{{ logro.descripcion }}</span>
-                  <img *ngIf="logro.imagen" [src]="logro.imagen" alt="Logro imagen" class="ml-3" style="width: 50px; height: 50px; object-fit: cover; border-radius: 5px;">
-                </li>
-              </ul>
-              <h5 class="mt-3">Artefactos</h5>
-              <ul class="list-group list-group-flush">
-                <li *ngFor="let artefacto of perfil.listaArtefactos" class="list-group-item">
-                  {{ artefacto.nombre }}
-                </li>
-              </ul>
+              <div *ngIf="!esProfesor()">
+                <h5>Logros</h5>
+                <ul class="list-group list-group-flush">
+                  <li *ngFor="let logro of perfil.listaLogros" class="list-group-item d-flex align-items-center">
+                    
+                    <img *ngIf="logro.imagen; else defaultImage" [src]="logro.imagen" alt="Logro imagen"
+                      class="ml-3" style="width: 50px; height: 50px; object-fit: cover; border-radius: 5px;">
+                    <ng-template #defaultImage>
+                      <span>{{ logro.descripcion }}</span>
+                      <img src="assets/images/artefacto.png" alt="Imagen predeterminada" class="ml-3"
+                        style="width: 50px; height: 50px; object-fit: cover; border-radius: 5px;">
+                    </ng-template>
+                  </li>
+                </ul>
+              </div>
+              <div *ngIf="!esProfesor()">
+                <h5 class="mt-3">Artefactos</h5>
+                <ul class="list-group list-group-flush">
+                  <li *ngFor="let artefacto of perfil.listaArtefactos" class="list-group-item">
+                    {{ artefacto.nombre }}
+                  </li>
+                </ul>
+              </div>
               <div class="text-center mt-4">
                 <button type="submit" class="btn btn-success">Guardar Cambios</button>
               </div>
