--- a/src/app/modulos/preguntas/reporte-preguntas/reporte-preguntas.component.html
+++ b/src/app/modulos/preguntas/reporte-preguntas/reporte-preguntas.component.html
@@ -22,4 +22,7 @@
       </div>
     </div>
   </div>
+  <div class="d-flex gap-2 mt-3">
+    <button class="btn btn-secondary" [routerLink]="['/asignaturas', idAsignatura,'test','listado']">Volver</button>
+  </div>
 </div>
