--- a/src/app/modulos/preguntas/testList.component/test-list.component.html
+++ b/src/app/modulos/preguntas/testList.component/test-list.component.html
@@ -12,7 +12,7 @@
             <th>Descripción</th>
             <th>Nº preguntas</th>
             <th>Temas</th>
-            <th>Acción</th>
+            <th *ngIf="!esProfesor()">Acción</th>
             <!-- Añade más columnas según lo necesites -->
           </tr>
         </thead>
@@ -23,7 +23,7 @@
             <td>{{ test.numeroPreguntas }}</td>
             <td>{{ test.listaTemas }}</td>
             <td>
-              <button class="btn btn-primary btn-sm" (click)="realizarTest(test.id)">Realizar Test</button>
+              <button class="btn btn-primary btn-sm" *ngIf="!esProfesor()" (click)="realizarTest(test.id)">Realizar Test</button>
             </td>
             <!-- Añade más celdas según lo necesites -->
           </tr>
