--- a/src/app/modulos/preguntas/testResultado.component/test-resultados.component.html
+++ b/src/app/modulos/preguntas/testResultado.component/test-resultados.component.html
@@ -25,7 +25,7 @@
             <div class="text-right">
               <button 
                 class="btn btn-primary" 
-                [routerLink]="['/asignaturas', idAsignatura, 'test', idTest, 'reportarPregunta', item.pregunta.id]">
+                (click)="openDialog(item)">
                 Crear Reporte
               </button>
             </div>
