--- a/src/app/modulos/asignatura/asignatura-main/listado/listado.component.html
+++ b/src/app/modulos/asignatura/asignatura-main/listado/listado.component.html
@@ -1,10 +1,12 @@
 <div class="container mt-4">
+  <div class="card bg-light rounded shadow p-4">
+
     <div class="row">
       <div class="col">
         <table class="table table-striped">
           <thead>
             <tr>
-              
+
               <th>Nombre</th>
               <th>Descripcion</th>
               <th>Curso</th>
@@ -17,33 +19,35 @@
           </thead>
           <tbody>
             <tr *ngFor="let asignatura of asignaturas" (click)="navegar(asignatura)">
-              
+
               <td>{{asignatura.nombre}}</td>
               <td>{{asignatura.descripcion}}</td>
               <td>{{asignatura.curso}}</td>
               <td>{{asignatura.codigo}}</td>
               <td *ngIf="!alumno">
-                <button class="btn btn-primary" [routerLink]="['/asignaturas', asignatura.id, 'listaSolicitudesPendientes']" (click)="$event.stopPropagation()">Solicitudes</button>
+                <button class="btn btn-primary"
+                  [routerLink]="['/asignaturas', asignatura.id, 'listaSolicitudesPendientes']"
+                  (click)="$event.stopPropagation()">Solicitudes</button>
               </td>
               <td *ngIf="!alumno">
-                <button class="btn btn-primary" [routerLink]="['/asignaturas', asignatura.id, 'editar']" (click)="$event.stopPropagation()">Editar</button>
+                <button class="btn btn-primary" [routerLink]="['/asignaturas', asignatura.id, 'editar']"
+                  (click)="$event.stopPropagation()">Editar</button>
               </td>
               <td *ngIf="!alumno">
-                <button class="btn btn-primary" (click)="borrarAsignatura(asignatura.id); $event.stopPropagation()">Eliminar</button>
+                <button class="btn btn-primary"
+                  (click)="borrarAsignatura(asignatura.id); $event.stopPropagation()">Eliminar</button>
               </td>
-              
+
               <!-- etc., agrega más celdas si necesitas -->
             </tr>
           </tbody>
         </table>
         <div class="mt-3" *ngIf="!alumno">
           <button class="btn btn-primary" routerLink="/asignaturas/añadir">Añadir</button>
-          
+
 
         </div>
       </div>
     </div>
   </div>
-
- 
-  
+</div>
