--- a/src/app/modulos/logros/anadir-logros/anadir-logros.component.html
+++ b/src/app/modulos/logros/anadir-logros/anadir-logros.component.html
@@ -46,7 +46,7 @@
 
 
           <div class="mt-2">
-            <input disabled="!esProfesor()" type="file" (change)="onFileSelected($event)" />
+            <input [disabled]="!esProfesor()" type="file" (change)="onFileSelected($event)" />
           </div>
 
         </div>
