--- a/src/app/modulos/logros/listado-logros/listado-logros.component.html
+++ b/src/app/modulos/logros/listado-logros/listado-logros.component.html
@@ -1,42 +1,46 @@
 <div class="container mt-4">
-  <div class="row">
-    <div class="col">
-      <div class="d-flex justify-content-between align-items-center mb-4">
-        <h1 class="display-4 text-primary title-styled">Lista de Logros</h1>
-      </div>
-      <table class="table table-striped table-hover">
-        <thead>
-          <tr>
-            <th>Nombre</th>
-            <th>Descripcion</th>
-            <th>Retos</th>
-            <th>Desbloquear/Obtener</th>
-            <th>Artefacto</th>
-            <th *ngIf="esProfesor()">Eliminar</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let logro of logros" class="tabla-fila" (click)="navegar(logro.id)">
-            <td>{{logro.nombre}}</td>
-            <td>{{logro.descripcion}}</td>
-            <td>
-              <ul>
-                <li *ngFor="let reto of logro.retos">{{ reto.nombre }}</li>
-              </ul>
-            </td>
-            <td>
-              {{ getDesbloquearObtener(logro.artefactoLogros) }}
-            </td>
-            <td>{{logro?.artefactoLogros?.artefacto?.nombre}}</td>
-            <td *ngIf="esProfesor()">
-              <button class="btn btn-outline-danger btn-sm" (click)="borrarLogro(logro); $event.stopPropagation()">Eliminar</button>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-      <div class="d-flex gap-2 mt-3">
-        <button class="btn btn-secondary" [routerLink]="['/asignaturas', id]">Volver</button>
-        <button *ngIf="esProfesor()" class="btn btn-success" [routerLink]="['/asignaturas', id,'logros','añadir']">Añadir</button>
+  <div class="card bg-light rounded shadow p-4">
+    <div class="row">
+      <div class="col">
+        <div class="d-flex justify-content-between align-items-center mb-4">
+          <h1 class="display-4 text-primary title-styled">Lista de Logros</h1>
+        </div>
+        <table class="table table-striped table-hover">
+          <thead>
+            <tr>
+              <th>Nombre</th>
+              <th>Descripcion</th>
+              <th>Retos</th>
+              <th>Desbloquear/Obtener</th>
+              <th>Artefacto</th>
+              <th *ngIf="esProfesor()">Eliminar</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let logro of logros" class="tabla-fila" (click)="navegar(logro.id)">
+              <td>{{logro.nombre}}</td>
+              <td>{{logro.descripcion}}</td>
+              <td>
+                <ul>
+                  <li *ngFor="let reto of logro.retos">{{ reto.nombre }}</li>
+                </ul>
+              </td>
+              <td>
+                {{ getDesbloquearObtener(logro.artefactoLogros) }}
+              </td>
+              <td>{{logro?.artefactoLogros?.artefacto?.nombre}}</td>
+              <td *ngIf="esProfesor()">
+                <button class="btn btn-outline-danger btn-sm"
+                  (click)="borrarLogro(logro); $event.stopPropagation()">Eliminar</button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+        <div class="d-flex gap-2 mt-3">
+          <button class="btn btn-secondary" [routerLink]="['/asignaturas', id]">Volver</button>
+          <button *ngIf="esProfesor()" class="btn btn-success"
+            [routerLink]="['/asignaturas', id,'logros','añadir']">Añadir</button>
+        </div>
       </div>
     </div>
   </div>
