--- a/src/app/modulos/retos/listado-retos/listado-retos.component.html
+++ b/src/app/modulos/retos/listado-retos/listado-retos.component.html
@@ -1,4 +1,6 @@
 <div class="container mt-4">
+  <div class="card bg-light rounded shadow p-4">
+
   <div class="d-flex justify-content-between align-items-center mb-4">
     <h1 class="display-4 text-primary title-styled">Lista de Retos</h1>
   </div>
@@ -72,4 +74,5 @@
       </div>
     </div>
   </div>
+</div>
 </div>
