--- a/src/app/modulos/tema/listado-temas/listado-temas.component.html
+++ b/src/app/modulos/tema/listado-temas/listado-temas.component.html
@@ -1,59 +1,63 @@
 <div class="container mt-4">
-  <div class="row">
-    <div class="col">
-      <!-- Título -->
-      <div class="d-flex justify-content-between align-items-center mb-4">
-        <h1 class="display-4 text-primary title-styled">Lista de Temas</h1>
-      </div>
+  <div class="card bg-light rounded shadow p-4">
 
-      <!-- Tabla -->
-      <table class="table table-striped table-hover" *ngIf="temas.length > 0">
-        <thead class="thead-dark">
-          <tr>
-            <th>Nombre</th>
-            <th>Descripción</th>
-            <th *ngIf="esProfesor()">Eliminar</th>
-            <th *ngIf="!esProfesor()">Crear pregunta</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let tema of temas" class="tabla-fila" (click)="navegar(tema.id)">
-            <td>{{tema.nombre}}</td>
-            <td>{{tema.descripcion}}</td>
-            <td *ngIf="esProfesor()">
-              <button class="btn btn-outline-danger btn-sm" (click)="borrarTema(tema); $event.stopPropagation()">Eliminar</button>
-            </td>
-            <td *ngIf="!esProfesor()">
-              <button 
-                class="btn btn-outline-primary btn-sm" 
-                [routerLink]="['/asignaturas', id, 'temas', tema.id ,'crearPregunta']"
-                (click)="$event.stopPropagation()">
-                Crear pregunta
-              </button>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-
-      <!-- Mensaje de no registros -->
-      <div *ngIf="temas.length === 0"
-        class="alert alert-info text-center d-flex flex-column justify-content-center align-items-center" role="alert"
-        style="height: 200px;">
-        <div>
-          <h4 class="alert-heading">Información</h4>
-          <p>No hay registros disponibles.</p>
+    <div class="row">
+      <div class="col">
+        <!-- Título -->
+        <div class="d-flex justify-content-between align-items-center mb-4">
+          <h1 class="display-4 text-primary title-styled">Lista de Temas</h1>
         </div>
+
+        <!-- Tabla -->
+        <table class="table table-striped table-hover" *ngIf="temas.length > 0">
+          <thead class="thead-dark">
+            <tr>
+              <th>Nombre</th>
+              <th>Descripción</th>
+              <th *ngIf="esProfesor()">Eliminar</th>
+              <th *ngIf="!esProfesor()">Crear pregunta</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let tema of temas" class="tabla-fila" (click)="navegar(tema.id)">
+              <td>{{tema.nombre}}</td>
+              <td>{{tema.descripcion}}</td>
+              <td *ngIf="esProfesor()">
+                <button class="btn btn-outline-danger btn-sm"
+                  (click)="borrarTema(tema); $event.stopPropagation()">Eliminar</button>
+              </td>
+              <td *ngIf="!esProfesor()">
+                <button class="btn btn-outline-primary btn-sm"
+                  [routerLink]="['/asignaturas', id, 'temas', tema.id ,'crearPregunta']"
+                  (click)="$event.stopPropagation()">
+                  Crear pregunta
+                </button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+
+        <!-- Mensaje de no registros -->
+        <div *ngIf="temas.length === 0"
+          class="alert alert-info text-center d-flex flex-column justify-content-center align-items-center" role="alert"
+          style="height: 200px;">
+          <div>
+            <h4 class="alert-heading">Información</h4>
+            <p>No hay registros disponibles.</p>
+          </div>
+        </div>
+
+        <!-- Botones -->
+        <div class="d-flex gap-2 mt-3">
+          <button class="btn btn-secondary" [routerLink]="['/asignaturas', id]">Volver</button>
+          <button class="btn btn-success" *ngIf="esProfesor()"
+            [routerLink]="['/asignaturas', id,'temas','añadir']">Añadir</button>
+        </div>
+
+
+
+
       </div>
-
-      <!-- Botones -->
-      <div class="d-flex gap-2 mt-3">
-        <button class="btn btn-secondary" [routerLink]="['/asignaturas', id]">Volver</button>
-        <button class="btn btn-success" *ngIf="esProfesor()" [routerLink]="['/asignaturas', id,'temas','añadir']">Añadir</button>
-      </div>
-
-
-
-
     </div>
   </div>
 </div>
