--- a/src/app/modulos/logros/anadir-logros/anadir-logros.component.html
+++ b/src/app/modulos/logros/anadir-logros/anadir-logros.component.html
@@ -49,6 +49,10 @@
             <input [disabled]="!esProfesor()" type="file" (change)="onFileSelected($event)" />
           </div>
 
+          <div class="mt-2">
+            <img *ngIf="base64Image" [src]="base64Image" alt="Imagen del Logro" class="img-thumbnail" style="width: 150px; height: 150px; object-fit: cover; border-radius: 5px;" />
+          </div>
+
         </div>
 
 
