--- a/src/app/modulos/usuario/register/register.component.html
+++ b/src/app/modulos/usuario/register/register.component.html
@@ -24,9 +24,9 @@
             <div class="mb-3">
               <label class="form-label">Rol:</label>
               <select class="form-control" formControlName="rol" required>
-                <option value="">Selecciona una opción</option>
-                <option value="ROL_ADMIN">Admin</option>
-                <option value="ROL_USER">User</option>
+                <option disabled value="" >Selecciona una opción</option>
+                <option value="ROL_ADMIN">Profesor</option>
+                <option value="ROL_USER">Alumno</option>
               </select>
             </div>
             <div class="d-grid">
