--- a/src/app/modulos/web-main/footer/footer.component.html
+++ b/src/app/modulos/web-main/footer/footer.component.html
@@ -1,10 +1,8 @@
 <footer class="footer">
     <div class="container">
-      <p>© 2024 Tu Empresa. Todos los derechos reservados.</p>
+      <p>© 2024 Gameduca. Todos los derechos reservados.</p>
       <ul>
-        <li><a href="/privacy">Política de privacidad</a></li>
-        <li><a href="/terms">Términos de servicio</a></li>
-        <li><a href="/contact">Contacto</a></li>
+        <li><a >Contacto: gameduca&#64;gmail.com</a></li>
       </ul>
     </div>
   </footer>
