--- a/src/app/modulos/artefactos/listado-artefactos-alumnos/listado-artefactos-alumnos.component.html
+++ b/src/app/modulos/artefactos/listado-artefactos-alumnos/listado-artefactos-alumnos.component.html
@@ -21,7 +21,7 @@
         <td>{{artefactoCompra.artefacto.descripcion}}</td>
         <td>{{artefactoCompra.artefacto.costePuntos}}</td>
         <td>{{artefactoCompra.artefacto.estado}}</td>
-        <td>{{artefactoCompra.artefacto.temporal}}</td>
+        <td>{{artefactoCompra.artefacto.temporal?"Sí":"No"}}</td>
         <td>{{artefactoCompra.artefacto.fechaInicio| date: 'dd/MM/yyyy' }}</td>
         <td>{{artefactoCompra.artefacto.fechaFin| date: 'dd/MM/yyyy' }}</td>
 
