--- a/src/app/modulos/usuario/register/register.component.html
+++ b/src/app/modulos/usuario/register/register.component.html
@@ -25,8 +25,8 @@
               <label class="form-label">Rol:</label>
               <select class="form-control" formControlName="rol" required>
                 <option disabled value="" >Selecciona una opción</option>
-                <option value="ROL_ADMIN">Profesor</option>
-                <option value="ROL_USER">Alumno</option>
+                <option value="ROLE_ADMIN">Profesor</option>
+                <option value="ROLE_USER">Alumno</option>
               </select>
             </div>
             <div class="d-grid">
