--- a/src/app/modulos/usuario/login/login.component.html
+++ b/src/app/modulos/usuario/login/login.component.html
@@ -10,7 +10,7 @@
               <input type="text" class="form-control" name="username" formControlName="nombreUsuario" required>
             </div>
             <div class="mb-3">
-              <label class="form-label">Password</label>
+              <label class="form-label">Contraseña</label>
               <input type="password" class="form-control" name="password" formControlName="password" required>
             </div>
             <div class="d-grid">
