--- a/src/app/modulos/web-main/perfil/perfil.component.html
+++ b/src/app/modulos/web-main/perfil/perfil.component.html
@@ -92,5 +92,5 @@
   </div>
 </div>
 <div mat-dialog-actions>
-  <button mat-button (click)="closeDialog()">Cerrar</button>
+  <button class="btn btn-secondary" mat-button (click)="closeDialog()">Cerrar</button>
 </div>
