--- a/src/app/modulos/asignatura/asignatura-navigate/asignatura-navigate.component.html
+++ b/src/app/modulos/asignatura/asignatura-navigate/asignatura-navigate.component.html
@@ -50,7 +50,7 @@
     <div class="card mb-4"
       style="height: 20rem; background-image: url('/assets/images/estadistica.jpg'); background-size: cover;">
       <div class="card-body text-center" >
-        <a [routerLink]="['/asignaturas', id, 'estadisticas']" class="btn btn-secondary">Estadisticas</a>
+        <a [routerLink]="['/asignaturas', id, 'estadisticas']" class="btn btn-secondary">Ir a Estadisticas</a>
       </div>
     </div>
   </div>
