--- a/src/app/modulos/estadisticas/preguntas-por-tema/preguntas-por-tema.component.html
+++ b/src/app/modulos/estadisticas/preguntas-por-tema/preguntas-por-tema.component.html
@@ -3,7 +3,7 @@
 
   <div class="row">
     <div class="col-12">
-      <h1 class="text-center mb-4">Notas de los alumnos por test</h1>
+      <h1 class="text-center mb-4">Número de preguntas por temas</h1>
     </div>
     <div class="col-12 text-center mb-4">
       <button class="btn  d-flex align-items-center justify-content-center" (click)="openInfoDialog()" style="cursor: pointer;">
