--- a/src/app/modulos/preguntas/reporte-preguntas/reporte-preguntas.component.html
+++ b/src/app/modulos/preguntas/reporte-preguntas/reporte-preguntas.component.html
@@ -3,8 +3,14 @@
     <div class="card-header bg-primary text-white text-center">
       <h2>Reportes de Preguntas</h2>
     </div>
-    <div class="card-body">
-      <div *ngFor="let reporte of reportePreguntas" class="mb-4">
+    <div style="margin-top: 3%;margin-bottom: 3%" class="col-md-6">
+      <select class="form-control" [(ngModel)]="estadoFiltro" (change)="filtrarPorEstado()">
+        <option *ngFor="let lista of listaEstados" [value]="lista">{{lista}}</option>
+      </select>
+    </div>
+    <div class="card-body" *ngIf="reportePreguntasFiltrada.length != 0">
+
+      <div *ngFor="let reporte of reportePreguntasFiltrada" class="mb-4">
         <div class="card mb-3">
           <div class="card-body">
             <h4 class="card-title">Pregunta: {{reporte.pregunta?.enunciado}}</h4>
@@ -18,12 +24,22 @@
             <p><strong>Estado:</strong> {{reporte.estado}}</p>
             <p><strong>Motivo:</strong> {{reporte.motivo}}</p>
 
-            <div *ngIf="reporte.estado === estadoEnviado" class="mt-3 d-flex gap-2">
+            <div *ngIf="((reporte.estado === estadoEnviado) && esProfesor()) " class="mt-3 d-flex gap-2">
               <button class="btn btn-success" (click)="aceptarReporte(reporte)">Aceptar Reporte</button>
               <button class="btn btn-danger" (click)="rechazarReporte(reporte)">Rechazar Reporte</button>
             </div>
           </div>
         </div>
+      </div>
+
+    </div>
+    <!-- Mensaje de no registros -->
+    <div *ngIf="reportePreguntasFiltrada.length === 0"
+      class="alert alert-info text-center d-flex flex-column justify-content-center align-items-center" role="alert"
+      style="height: 200px;">
+      <div>
+        <h4 class="alert-heading">Información</h4>
+        <p>No hay registros disponibles.</p>
       </div>
     </div>
   </div>
